s2s-traffic-migrator/specs/prerequisites/manifests/80-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: s2s-ingress-from-gateway
  namespace: __APP_NAMESPACE__
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateways
  to:
    - group: ""
      kind: Service
