s2s-traffic-migrator/specs/prerequisites/manifests/35-peer-jwks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __PEER_JWKS_NAME__
  namespace: kuadrant-system
spec:
  type: ExternalName
  externalName: __PEER_JWKS_EXTERNAL_HOST__
  ports:
    - port: 8080
      protocol: TCP
