s2s-traffic-migrator/specs/prerequisites/manifests/70-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: __APP_NAMESPACE__
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: __APP_NAMESPACE__
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateways
          podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: s2s-ingress
